Added mixins with media queries, made hero responsive

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,12 @@
 	</header>
 
 	<div class="large-hero">
-		<img src="assets/img/hero--large.jpg">
+		<picture>
+			<source srcset="assets/img/hero--large.jpg 1920w, assets/img/hero--large-hd.jpg 3840w" media="(min-width: 1380px)">
+			<source srcset="assets/img/hero--medium.jpg 1380w, assets/img/hero--medium-hd.jpg 2760w" media="(min-width: 990px)">
+			<source srcset="assets/img/hero--small.jpg 990w, assets/img/hero--small-hd.jpg 1980w" media="(min-width: 640px)">
+			<img srcset="assets/img/hero--smaller.jpg 640w, assets/img/hero--smaller-hd.jpg 1280w" alt="Coastal view of ocean">
+		</picture>
 		<div class="large-hero__text-content">
 			<h1 class="large-hero__title">Your clarity.</h1>
 			<h2 class="large-hero__subtitle">One trip away.</h2>
