--- a/app/index.html
+++ b/app/index.html
@@ -30,13 +30,15 @@
 			<source srcset="assets/img/hero--large.jpg 1920w, assets/img/hero--large-hd.jpg 3840w" media="(min-width: 1380px)">
 			<source srcset="assets/img/hero--medium.jpg 1380w, assets/img/hero--medium-hd.jpg 2760w" media="(min-width: 990px)">
 			<source srcset="assets/img/hero--small.jpg 990w, assets/img/hero--small-hd.jpg 1980w" media="(min-width: 640px)">
-			<img srcset="assets/img/hero--smaller.jpg 640w, assets/img/hero--smaller-hd.jpg 1280w" alt="Coastal view of ocean">
+			<img srcset="assets/img/hero--smaller.jpg 640w, assets/img/hero--smaller-hd.jpg 1280w" alt="Coastal view of ocean" class="large-hero__image">
 		</picture>
 		<div class="large-hero__text-content">
-			<h1 class="large-hero__title">Your clarity.</h1>
-			<h2 class="large-hero__subtitle">One trip away.</h2>
-			<p class="large-hero__descr">We create soul restoring journeys that inspire you to be you.</p>
-			<p><a class="btn btn--large" href="#">Get Started Today</a></p>
+			<div class="wrapper">
+				<h1 class="large-hero__title">Your clarity.</h1>
+				<h2 class="large-hero__subtitle">One trip away.</h2>
+				<p class="large-hero__descr">We create soul restoring journeys that inspire you to be you.</p>
+				<p><a class="btn btn--large" href="#">Get Started Today</a></p>
+			</div>
 		</div>
 	</div>
 
