--- a/app/index.html
+++ b/app/index.html
@@ -150,8 +150,14 @@
 		</div>
 	</div>
 
-	<footer>
-		<p>Copyright &copy; 2018 Clear View Escapes. All rights reserved. <a class="btn" href="#">Get in Touch</a></p>
+	<footer class="footer">
+		
+			<p>
+				<span class="footer__text">
+					Copyright &copy; 2018 Clear View Escapes. All rights reserved. 
+				</span>
+				<a class="btn" href="#">Get in Touch</a>
+			</p>
 	</footer>
 	
 </body>
