--- a/app/index.html
+++ b/app/index.html
@@ -13,16 +13,29 @@
 </head>
 <body>
 
-	<header>
-		<img src="assets/img/icons/clear-view-escapes.svg">
-		<a class="btn btn--blue" href="#">Get in Touch</a>
-		<nav>
-			<ul>
-				<li><a href="#our-beginning">Our Beginning</a></li>
-				<li><a href="#features">Features</a></li>
-				<li><a href="#testimonials">Testimonials</a></li>
-			</ul>
-		</nav>
+	<header class="header">
+		<div class="wrapper">
+			<div class="header__logo">
+				<img src="assets/img/icons/clear-view-escapes.svg">
+			</div>
+
+			<div class="header__menu-icon">
+				
+			</div>
+
+			<div class="header__menu-content">
+				<div class="header__btn-container">
+					<a class="btn btn--blue" href="#">Get in Touch</a>
+				</div>
+				<nav class="primary-nav primary-nav--pull-right">
+					<ul>
+						<li><a href="#our-beginning">Our Beginning</a></li>
+						<li><a href="#features">Features</a></li>
+						<li><a href="#testimonials">Testimonials</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 	</header>
 
 	<div class="large-hero">
