--- a/app/index.html
+++ b/app/index.html
@@ -163,15 +163,16 @@
 		</div>
 	</div>
 
-	<footer class="footer">
-		
-			<p>
-				<span class="footer__text">
-					Copyright &copy; 2018 Clear View Escapes. All rights reserved. 
-				</span>
-				<a class="btn" href="#">Get in Touch</a>
-			</p>
+	<footer class="footer">	
+		<p>
+			<span class="footer__text">
+				Copyright &copy; 2018 Clear View Escapes. All rights reserved. 
+			</span>
+			<a class="btn" href="#">Get in Touch</a>
+		</p>
 	</footer>
+
+	<script src="/temp/js/app.js"></script>
 	
 </body>
 </html>
