--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 			</div>
 
 			<div class="header__menu-icon">
-				
+				<div class="header__menu-icon__middle"></div>
 			</div>
 
 			<div class="header__menu-content">
