--- a/app/index.html
+++ b/app/index.html
@@ -172,6 +172,28 @@
 		</p>
 	</footer>
 
+	<div class="modal">
+		<div class="modal__inner">
+			<h2 class="section-title section-title--blue section-title--less-margin">
+				<img class="section-title__icon" src="assets/img/icons/mail.svg">
+				Get in <strong>Touch</strong>
+			</h2>
+
+			<div class="wrapper wrapper--narrow">
+				<p class="modal__descr">We will have an online order systemin place soon. Until then, connect with us on any of the platforms below!</p>
+			</div>
+
+			<div class="social-icons">
+				<a href="#" class="social-icons__icon"><img class="icon" src="assets/img/icons/facebook.svg"></a>
+				<a href="#" class="social-icons__icon"><img class="icon" src="assets/img/icons/twitter.svg"></a>
+				<a href="#" class="social-icons__icon"><img class="icon" src="assets/img/icons/instagram.svg"></a>
+				<a href="#" class="social-icons__icon"><img class="icon" src="assets/img/icons/youtube.svg"></a>
+			</div>
+		</div>
+
+		<div class="modal__close">X</div>
+	</div>
+
 	<script src="/temp/js/app.js"></script>
 	
 </body>
