--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 
 			<div class="header__menu-content">
 				<div class="header__btn-container">
-					<a class="btn btn--blue" href="#">Get in Touch</a>
+					<a class="btn btn--blue open-modal" href="#">Get in Touch</a>
 				</div>
 				<nav class="primary-nav primary-nav--pull-right">
 					<ul>
@@ -50,7 +50,7 @@
 				<h1 class="large-hero__title">Your clarity.</h1>
 				<h2 class="large-hero__subtitle">One trip away.</h2>
 				<p class="large-hero__descr">We create soul restoring journeys that inspire you to be you.</p>
-				<p><a class="btn btn--large" href="#">Get Started Today</a></p>
+				<p><a class="btn btn--large open-modal" href="#">Get Started Today</a></p>
 			</div>
 		</div>
 	</div>
@@ -168,7 +168,7 @@
 			<span class="footer__text">
 				Copyright &copy; 2018 Clear View Escapes. All rights reserved. 
 			</span>
-			<a class="btn" href="#">Get in Touch</a>
+			<a class="btn open-modal" href="#">Get in Touch</a>
 		</p>
 	</footer>
 
