--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="temp/css/style.css">
+	<script src="/temp/js/vendor.js"></script>
 </head>
 <body>
 
@@ -120,7 +121,7 @@
 		</div>
 	</div>
 
-	<div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials" data-matching-link="#testimonials-link">
+	<div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials lazyloaded" data-matching-link="#testimonials-link">
 		<div class="wrapper wrapper--no-padding-until-large">
 			
 			<h2 class="section-title section-title--blue">
@@ -132,7 +133,7 @@
 				<div class="row__large-4">
 					<div class="testimonial">
 						<div class="testimonial__photo">
-							<img sizes="160px" srcset="assets/img/testimonial-jane.jpg 160w, assets/img/testimonial-jane-hd.jpg 320w" alt="Jane Doe">
+							<img class="lazyload" sizes="160px" data-srcset="assets/img/testimonial-jane.jpg 160w, assets/img/testimonial-jane-hd.jpg 320w" alt="Jane Doe">
 						</div>
 						<h3 class="testimonial__title">Jane Doe</h3>
 						<h4 class="testimonial__subtitle">9 Time Escaper</h4>
@@ -142,7 +143,7 @@
 				<div class="row__large-4">
 					<div class="testimonial">
 						<div class="testimonial__photo">
-							<img sizes="160px" srcset="assets/img/testimonial-john.jpg 160w, assets/img/testimonial-john-hd.jpg 320w" alt="John Smith">
+							<img class="lazyload" sizes="160px" data-srcset="assets/img/testimonial-john.jpg 160w, assets/img/testimonial-john-hd.jpg 320w" alt="John Smith">
 						</div>
 						<h3 class="testimonial__title">John Smith</h3>
 						<h4 class="testimonial__subtitle">4 Time Escaper</h4>
@@ -152,7 +153,7 @@
 				<div class="row__large-4">
 					<div class="testimonial testimonial--last">
 						<div class="testimonial__photo">
-							<img sizes="160px" srcset="assets/img/testimonial-cat.jpg 160w, assets/img/testimonial-cat-hd.jpg 320w" alt="Cat McKitty">
+							<img class="lazyload" sizes="160px" data-srcset="assets/img/testimonial-cat.jpg 160w, assets/img/testimonial-cat-hd.jpg 320w" alt="Cat McKitty">
 						</div>
 						<h3 class="testimonial__title">Cat McKitty</h3>
 						<h4 class="testimonial__subtitle">6 Time Escaper</h4>
