Made final adjustments to run site from the /doc folder

--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,11 @@
 	<title>Clear View Escapes</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
 
-	<!-- build:css /assets/css/style.css -->
+	<!-- build:css assets/css/style.css -->
 	<link rel="stylesheet" href="temp/css/style.css">
 	<!-- endbuild -->
 
-	<!-- build:js /assets/js/vendor.js -->
+	<!-- build:js assets/js/vendor.js -->
 	<script src="/temp/js/vendor.js"></script>
 	<!-- endbuild -->
 </head>
@@ -200,7 +200,7 @@
 		<div class="modal__close">X</div>
 	</div>
 	
-	<!-- build:js /assets/js/app.js -->
+	<!-- build:js assets/js/app.js -->
 	<script src="/temp/js/app.js"></script>
 	<!-- endbuild -->
 	
