--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 
 	<title>Clear View Escapes</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="assets/favicon/favicon.ico">
 
 	<!-- build:css assets/css/style.css -->
 	<link rel="stylesheet" href="temp/css/style.css">
